--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@testing-library/react": "^16.0.1",
     "react": "^18.3.1",
     "vitest": "^2.1.8"
+  },
+  "devDependencies": {
+    "jsdom": "^25.0.1"
   }
 }
