--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "react": "^18.3.1",
+    "react-virtualized-auto-sizer": "^1.0.25",
     "vite": "^6.0.0",
     "vitest": "^3.0.5"
   },
